kubernetes/yamls/generator/android-deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: android-generator
  namespace: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: android-generator
    spec:
      containers:
      - name: android-generator
        image: eventyay/android-generator:latest
        command: ["/bin/sh","-c"]
        args: ["./kubernetes/run.sh"]
        livenessProbe:
          httpGet:
            path: /health-check/
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
