kubernetes/yamls/generator/ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: android-generator
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - droidgen.eventyay.com
    secretName: eventyay-tls
  rules:
  - host: droidgen.eventyay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: android-generator
          servicePort: 8080
